# nex-available-slots-report

./: eslint.config.js  package-lock.json  package.json
public/content/: getting-started.md
src/: App.tsx  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/api/: appointment_slots.rs  client.rs  mod.rs  types.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: appointment_slots.rs  client.rs  key.rs  mod.rs  types.rs
src-tauri/src/api/implementations/: appointment_slots.rs  appointment_types.rs  locations.rs  mod.rs  operatories.rs  providers.rs
src-tauri/src/api/types/: appointment_slots.rs  appointment_types.rs  availabilities.rs  bio.rs  locations.rs  mod.rs  nex_api.rs  operatories.rs  providers.rs
src-tauri/src/commands/: api_calls.rs  app_state.rs  controller.rs  controller_commands.rs  file_system.rs  mod.rs
src-tauri/src/services/: controller.rs  mod.rs
src-tauri/src/services/processors/: appointment_slots_processor.rs  mod.rs  traits.rs
src-tauri/src/services/processors/types/: appointment_slots_data.rs  data_confirmation.rs  mod.rs  process_steps.rs  processor_advance_result.rs  processor_error.rs  processor_interrupt.rs  traits.rs
src-tauri/src/utils/: app_data.rs  app_state.rs  mod.rs
src/components/: accordion.tsx  button.tsx  content-container.tsx  input.tsx  loading-indicator.tsx  markdown-file.tsx  modal.tsx  multi-select.tsx  notification-list.tsx  process.tsx  spinner.tsx
src/css/: animations.css  app.css  markdown.css
src/hooks/: useAppState.ts  (+4 more)
types/: appointment-slots.ts
(+35 files in other folders)
