[package]
name = "nex-available-slots-report"
version = "0.1.0"
description = "Get Available Slot Analytics from NexHealth"
authors = ["Ebreiny"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nex_available_slots_report_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.44", features = ["clock", "serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "query"] }
rust_xlsxwriter = "0.93.0"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.17.0", features = ["chrono"] }
